app/assets/stylesheets/bootstrap_and_overrides.css.less
@import "twitter/bootstrap/bootstrap";
/* Uncomment if using navbar-fixed
body {
  padding-top: 40px; // make room for the navbar
}
*/
//@import "twitter/bootstrap/responsive";
//@gridColumns: 16;
//@gridColumnWidth: 50px;
//@gridGutterWidth: 0px;

// Set the correct sprite paths
@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');

@linkColor: #27d;

@warningText: darken(#c09853, 3%);
@warningBorder: desaturate(darken(spin(@warningBackground, -10), 20%), 20%);

@navbarBackgroundHighlight: #1f5fdf;
@navbarBackground: darken(@navbarBackgroundHighlight, 15%);
@navbarLinkColor: lighten(saturate(@navbarBackgroundHighlight, 30%), 45%);
@navbarText: desaturate(darken(@navbarLinkColor, 15%), 50%);

.wrap {
  .container-fluid;
  /*.container-fixed();
  width: @gridRowWidth;*/
}

.navbar {
  margin-bottom: 0;
  a {
    font-weight: bold;
  }
}

.navbar-inner {
  .border-radius(0);
  .container-fluid {
    padding:0;
  }
}

.navbar .nav a.active, .navbar .nav a.active:hover {
  color: white;
  text-decoration: none;
  background-color: rgba(0,0,0,0.25);
}

@facebookColor: saturate(#3b5998, 5%);
.btn-facebook {
  .buttonBackground(lighten(@facebookColor, 15%), darken(@facebookColor, 0%));
}
.btn-facebook, .btn-facebook:hover {
  color: @white;
  text-shadow: 0 -1px 0 rgba(0,0,0,.25);
}

